--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,9 +13,9 @@ $(FAIL): $(wildcard $(FAIL)/*.el)
 FORCE:
 
 $(PASS)/%.el: FORCE
-	@echo $@; $(SLIP) $@ > $@.out
+	@echo $@; $(SLIP) $@ > $@.out 2> $@.err
 
 $(FAIL)/%.el: FORCE
-	@echo $@; if ($(SLIP) $@ > $@.out); then exit 1; fi
+	@echo $@; if ($(SLIP) $@ > $@.out 2> $@.err); then exit 1; fi
 
 
