separated closures from builtins

--- a/meson.build
+++ b/meson.build
@@ -20,7 +20,7 @@ executable('slip',
            'substitution.cpp',
            'kind.cpp',
            'package.cpp',
-           'builtin.cpp',
+           'builtins.cpp',
            'infer.cpp',
            'unify.cpp',
            dependencies: [readline],
